# modus

.github/workflows/: mayhem.yml
mayhem/: Dockerfile  dockerfile.mayhemfile  modusfile.mayhemfile
modus-lib/fuzz/: Cargo.toml
modus-lib/fuzz/fuzz_targets/: dockerfile.rs  modusfile.rs
